--- a/_CI/docker-compose.yml
+++ b/_CI/docker-compose.yml
@@ -10,4 +10,4 @@ services:
     build:
       context: ../
       dockerfile: _CI/Dockerfile
-    command: gunicorn --bind 0.0.0.0:6000 text_classification.wsgi:app --max-requests=50 --max-requests-jitter=25 --workers=5 --timeout=60
+    command: gunicorn --bind 0.0.0.0:6000 text_classification.wsgi:app --workers=8 --timeout=60
