--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,32 +1,20 @@
-attrs==20.3.0
-click==7.1.2
+click==8.0.3
 DAWG-Python==0.7.2
 docopt==0.6.2
-Flask==1.1.2
-gunicorn==20.1.0
-h5py==3.1.0
-iniconfig==1.1.1
-itsdangerous==1.1.0
-Jinja2==2.11.3
-joblib==1.0.0
-MarkupSafe==1.1.1
-nltk==3.5
-numpy==1.20.0
-packaging==20.9
-pandas==1.2.4
-pluggy==0.13.1
-py==1.10.0
+Flask==2.0.2
+itsdangerous==2.0.1
+Jinja2==3.0.2
+joblib==1.1.0
+MarkupSafe==2.0.1
+numpy==1.21.2
+pandas==1.3.4
 pymorphy2==0.9.1
 pymorphy2-dicts-ru==2.4.417127.4579844
-pyparsing==2.4.7
-pytest==6.2.3
-PyYAML==5.4.1
-regex==2020.11.13
-scikit-learn==0.24.1
-scipy==1.6.0
-six==1.15.0
+python-dateutil==2.8.2
+pytz==2021.3
+scikit-learn==1.0
+scipy==1.7.1
+six==1.16.0
 sklearn==0.0
-threadpoolctl==2.1.0
-toml==0.10.2
-tqdm==4.56.0
-Werkzeug==1.0.1
+threadpoolctl==3.0.0
+Werkzeug==2.0.2
